feat: Implementa arquitetura profissional e melhorias de UX
Reestrutura completamente a aplicação para uma arquitetura de módulos (core, gui, utils), melhorando a organização e a manutenibilidade do código.

Novas Funcionalidades e Melhorias:
- Adiciona um sistema de cache local (cache.db) para acelerar a inicialização.
- Implementa um ficheiro de configuração externo (settings.ini) para parâmetros flexíveis.
- Adiciona um sistema de logging profissional que grava os eventos em pp.log.
- Introduz uma barra de status para feedback constante ao utilizador.
- Implementa a atualização automática de dados em segundo plano.
- Adiciona a funcionalidade de guardar o tema e a geometria da janela entre sessões (pp_state.json).
- Adiciona um botão para limpar o filtro da tabela.
- Melhora a função de exportação para correr em segundo plano e exportar todos os dados filtrados.

Correções de Erros:
- Resolve múltiplos erros de importação (ModuleNotFoundError) relacionados com a nova estrutura.
- Corrige a funcionalidade de ordenação por data, que não estava a persistir.
- Elimina o erro AttributeError ao substituir .config() por .configure() em todos os widgets CustomTkinter.
- Torna a aplicação mais robusta contra dados inconsistentes da API (ex: KeyError: 'DATAHORA').

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,18 @@
-# Ignorar pastas de cache do Python
+# Ficheiros e pastas de cache/log da aplicação
+cache.db
+app.log
+app_state.json
+
+# Pastas de cache do Python
 __pycache__/
 *.pyc
 
-# Ignorar ficheiros de cache e logs da aplicação
-cache.db
-app.log
-
-# Ignorar ficheiros de configuração de IDEs (ex: VSCode)
-.vscode/
-.idea/
-
-# Ignorar pastas geradas pelo PyInstaller (para criar o .exe)
+# Pastas de compilação do PyInstaller
 build/
 dist/
 *.spec
 
-# Ignorar ficheiros do ambiente virtual (se usar um)
-venv/
-.venv/
+# Configuração de IDEs
+.vs/
+.vscode/
+.idea/
