feat: Implementa carregamento de credenciais via .env e refatora CacheManager
Implementa melhorias cruciais de segurança e arquitetura na aplicação.
1. Segurança:
   - Remove credenciais hardcoded de src/main.py.
   - Implementa o carregamento de credenciais via variáveis de ambiente usando python-dotenv (arquivo .env).

2. Arquitetura:
   - Refatora src/core/cache.py de funções de módulo para a classe CacheManager, melhorando o encapsulamento e a arquitetura orientada a objetos (OOP).
   - Adapta src/core/api.py para utilizar a nova classe CacheManager.

3. Robustez e UX:
   - Adiciona lógica de validação robusta para os campos de data em src/gui/app_gui_ctk.py, fornecendo feedback explícito na barra de status em caso de erro de formato (AAAA-MM-DD).
   - Melhora a validação do campo IDMENSAGEM para tratar explicitamente campos vazios.

4. Boas Práticas:
   - Adiciona .env, cache.db e outros arquivos temporários ao .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,29 @@
-# Ficheiros e pastas de cache/log da aplicação
-cache.db
-app.log
-app_state.json
+# .gitignore aprimorado
+# Excluir variáveis de ambiente e arquivos de configuração sensíveis
+.env
+settings.ini
 
-# Pastas de cache do Python
+# Excluir banco de dados de cache
+cache.db
+*.sqlite
+
+# Excluir arquivos de pacotes Python
 __pycache__/
 *.pyc
+.pytest_cache/
+.mypy_cache/
+.coverage
 
-# Pastas de compilação do PyInstaller
-build/
+# Excluir arquivos do PyInstaller/Build
 dist/
+build/
 *.spec
 
-# Configuração de IDEs
-.vs/
+# Excluir logs
+*.log
+
+# Excluir arquivos do IDE (ex: VS Code)
 .vscode/
-.idea/
+
+# Excluir arquivos do sistema
+.DS_Store
