--- a/app_state.json
+++ b/app_state.json
@@ -1,4 +1,7 @@
 {
     "theme": "dark_green",
-    "geometry": "1366x745+0+0"
+    "geometry": "1366x745+0+0",
+    "coluna_ordenacao": "DATAHORA",
+    "ordem_desc": true,
+    "pagina_atual": 1
 }
