--- a/app_state.json
+++ b/app_state.json
@@ -1,7 +1,6 @@
 {
     "theme": "dark_green",
-    "geometry": "1458x878+1419+9",
-
+    "geometry": "1458x878+1532+62",
     "coluna_ordenacao": "PLACA",
     "ordem_desc": true,
     "pagina_atual": 1,
@@ -12,5 +11,6 @@
         "LONGITUDE",
         "PLACA",
         "TrackID"
-    ]
+    ],
+    "menu_expanded": true
 }
