--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,7 @@
+PyQt6
 requests
-customtkinter
+
 pandas
 xlsxwriter
-python-dotenv  # NOVO: Para carregar API_URL, USER e PASSWORD de forma segura
+python-dotenv
+matplotlib
