--- a/app_state.json
+++ b/app_state.json
@@ -1,5 +1,5 @@
 {
-    "theme": "tech_dark",
+    "theme": "tech_light",
     "visible_columns": [
         "DATAHORA",
         "IDMENSAGEM",
@@ -9,17 +9,17 @@
         "TrackID"
     ],
     "geometry": [
-        1778,
-        100,
-        1300,
-        700
+        0,
+        31,
+        1366,
+        745
     ],
     "column_widths": [
-        208,
-        208,
-        208,
-        207,
-        207,
-        207
+        219,
+        219,
+        219,
+        218,
+        218,
+        218
     ]
 }
